--- a/templates/partials/toc/toc.html
+++ b/templates/partials/toc/toc.html
@@ -4,14 +4,14 @@
       <div class="mainLink" id="toc-chaptersLink">
         <p class="mainLink-text">Maxa Millennial Chapters</p>
       </div>
+      <div class="mainLink" id="toc-SF-NonfictionLink">
+        <p class="mainLink-text">The Greener Side</p>
+      </div>
       <div class="mainLink" id="toc-fictionLink">
         <p class="mainLink-text">Fiction</p>
       </div>
       <div class="mainLink" id="toc-LF-NonfictionLink">
         <p class="mainLink-text">Longform Non-fiction</p>
-      </div>
-      <div class="mainLink" id="toc-SF-NonfictionLink">
-        <p class="mainLink-text">Shortform Non-fiction</p>
       </div>
       <div class="mainLink" id="toc-aphorismsLink">
         <p class="mainLink-text">Aphorisms</p>
