--- a/scss/_toc-links.scss
+++ b/scss/_toc-links.scss
@@ -61,6 +61,10 @@
     text-align: center;
     transition: opacity 0.5s;
     opacity: 1;
+    @include respond(break-1400) {
+      padding: 0.5rem;
+      font-size: 1.5rem;
+    }
   }
 
   &-aphorism {
