--- a/templates/partials/toc/toc_aphorisms.html
+++ b/templates/partials/toc/toc_aphorisms.html
@@ -43,4 +43,8 @@
     </div>
   </div>
   <div class="toc-pieceDisplay" id="aphorismTextAndTitle"></div>
+  <div class="modal-close--toc" id="aphorismClose">
+    <div class="line-1"></div>
+    <div class="line-2"></div>
+  </div>
 </div>
