--- a/templates/partials/toc/toc_poetry.html
+++ b/templates/partials/toc/toc_poetry.html
@@ -37,6 +37,11 @@
     <div class="pieceLink pieceLink-poetry" id="p23">The Wheel Is Turning</div>
   </div>
   <div class="toc-pieceDisplay" id="poemTextAndTitle">
+    <div class="modal-close--toc" id="poemClose">
+      <div class="line-1"></div>
+      <div class="line-2"></div>
+    </div>
+
     <div class="test"></div>
   </div>
 </div>
