Aphorisms and poems mobile 3

--- a/css/style.css
+++ b/css/style.css
@@ -2427,11 +2427,81 @@ a {
 .pieceDisplay-header {
   text-align: center;
   font-size: 4rem;
-  margin-top: 2rem; }
+  margin-top: 2rem;
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1250) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1600
+   @include respond(break-greater-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+  @media (max-width: 53.125em) {
+    .pieceDisplay-header {
+      font-size: 3.5rem; } }
 
 .pieceDisplay-text {
   margin: 3rem;
-  font-size: 2rem; }
+  font-size: 2rem;
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1250) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1600
+   @include respond(break-greater-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+  @media (max-width: 53.125em) {
+    .pieceDisplay-text {
+      font-size: 1.8rem; } }
 
 .pieceDisplay-link {
   margin-left: 3rem;
@@ -2981,7 +3051,7 @@ a {
    *=============================================**/ }
   @media (max-width: 53.125em) {
     .toc-miniContainer {
-      width: 70%;
+      width: 95%;
       height: 30%;
       margin-bottom: 1rem; } }
 
@@ -3026,7 +3096,7 @@ a {
    *=============================================**/ }
   @media (max-width: 53.125em) {
     .toc-pieceDisplay {
-      width: 70%;
+      width: 95%;
       height: 70%;
       margin-bottom: 1rem; } }
 
@@ -3074,8 +3144,8 @@ a {
   @media (max-width: 53.125em) {
     .modal-close--toc {
       display: block;
-      top: 4rem;
-      right: 3rem; } }
+      top: 35%;
+      right: 4rem; } }
 
 .line-1,
 .line-2 {
