--- a/scss/_toc-containers.scss
+++ b/scss/_toc-containers.scss
@@ -150,7 +150,7 @@
   border-radius: 5px;
   overflow: scroll;
   @include respond(break-850) {
-    width: 70%;
+    width: 95%;
     height: 30%;
     margin-bottom: 1rem;
   }
@@ -163,7 +163,7 @@
   border-radius: 5px;
   overflow-y: auto;
   @include respond(break-850) {
-    width: 70%;
+    width: 95%;
     height: 70%;
     margin-bottom: 1rem;
   }
@@ -180,8 +180,8 @@
   display: none;
   @include respond(break-850) {
     display: block;
-    top: 4rem;
-    right: 3rem;
+    top: 35%;
+    right: 4rem;
   }
 }
 
