--- a/scss/_toc-links.scss
+++ b/scss/_toc-links.scss
@@ -123,10 +123,16 @@
     text-align: center;
     font-size: 4rem;
     margin-top: 2rem;
+    @include respond(break-850) {
+      font-size: 3.5rem;
+    }
   }
   &-text {
     margin: 3rem;
     font-size: 2rem;
+    @include respond(break-850) {
+      font-size: 1.8rem;
+    }
   }
   &-link {
     margin-left: 3rem;
