Added second layout to remove JS errors from unneeded pages and fix sticky nav. First cut looks finished except for contact page  and about page.

--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -32,13 +32,9 @@
     <!--====== STYLE SHEETS ======-->
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="pageContainer">
+  <body class="">
     {% block content %} {% endblock %}
     <!------- JAVASCRIPT ------->
     <script src="topNav.js"></script>
-    <script src="toc.js"></script>
-    <script src="poems.js"></script>
-    <script src="aphorisms.js"></script>
-    <script src="mediaQueries.js"></script>
-    <script src="tocModals.js"></script>
+    <script src="smoothScroll.js"></script>
 </html>
