--- a/templates/partials/toc/toc_aphorisms.html
+++ b/templates/partials/toc/toc_aphorisms.html
@@ -5,6 +5,7 @@
 >
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Aphorism List</div>
+    <div class="miniContainer-header--close" id="aphorismClose">Close</div>
     <div class="pieceLink pieceLink-aphorism" id="a1">A Drop In the Ocean</div>
     <div class="pieceLink pieceLink-aphorism" id="a2">Age Old Wisdom</div>
     <div class="pieceLink pieceLink-aphorism" id="a3">Charity Work</div>
@@ -43,8 +44,4 @@
     </div>
   </div>
   <div class="toc-pieceDisplay" id="aphorismTextAndTitle"></div>
-  <div class="modal-close--toc" id="aphorismClose">
-    <div class="line-1"></div>
-    <div class="line-2"></div>
-  </div>
 </div>
