--- a/css/style.css
+++ b/css/style.css
@@ -2524,7 +2524,6 @@ a {
   z-index: 10;
   width: 100%;
   font-size: 2.5rem;
-  padding-left: 1rem;
   text-align: center;
   text-decoration: underline;
   background-color: white;
@@ -2565,6 +2564,52 @@ a {
   @media (min-width: 100em) {
     .miniContainer-header {
       font-size: 3.5rem; } }
+  .miniContainer-header--close {
+    z-index: 10;
+    width: 100%;
+    padding: 1rem 1rem;
+    font-size: 1.8rem;
+    text-align: center;
+    text-decoration: underline;
+    background-color: #f88585;
+    position: sticky;
+    top: 3rem;
+    display: none;
+    /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+    /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+    /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+    /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1250) {}
+   *=============================================**/
+    /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+    /**============================================
+   *                Larger than - 1600
+   @include respond(break-greater-1600) {}
+   *=============================================**/
+    /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+    /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+    @media (max-width: 53.125em) {
+      .miniContainer-header--close {
+        display: block; } }
 
 /**========================================================================
  *                           TABLE OF CONTENTS 
