--- a/scss/_toc-links.scss
+++ b/scss/_toc-links.scss
@@ -157,7 +157,6 @@
   z-index: 10;
   width: 100%;
   font-size: 2.5rem;
-  padding-left: 1rem;
   text-align: center;
   text-decoration: underline;
   background-color: $color-white;
@@ -165,5 +164,21 @@
   top: 0;
   @include respond(break-greater-1600) {
     font-size: 3.5rem;
+  }
+
+  &--close {
+    z-index: 10;
+    width: 100%;
+    padding: 1rem 1rem;
+    font-size: 1.8rem;
+    text-align: center;
+    text-decoration: underline;
+    background-color: $color-light-red;
+    position: sticky;
+    top: 3rem;
+    display: none;
+    @include respond(break-850) {
+      display: block;
+    }
   }
 }
