--- a/templates/partials/toc/toc_poetry.html
+++ b/templates/partials/toc/toc_poetry.html
@@ -2,6 +2,7 @@
 <div class="toc-pieceLinks--poetry pointerEvents-none" id="toc-poetryDisplay">
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Poem List</div>
+    <div class="miniContainer-header--close" id="poemClose">Close</div>
     <div class="pieceLink pieceLink-poetry" id="p1">5:21</div>
     <div class="pieceLink pieceLink-poetry" id="p2">A Drug for Humans</div>
     <div class="pieceLink pieceLink-poetry" id="p3">DOCTYPE! Soulscape</div>
@@ -37,8 +38,4 @@
     <div class="pieceLink pieceLink-poetry" id="p23">The Wheel Is Turning</div>
   </div>
   <div class="toc-pieceDisplay" id="poemTextAndTitle"></div>
-  <div class="modal-close--toc" id="poemClose">
-    <div class="line-1"></div>
-    <div class="line-2"></div>
-  </div>
 </div>
