--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -32,7 +32,7 @@
     <!--====== STYLE SHEETS ======-->
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="">
+  <body class="position-relative">
     {% block content %} {% endblock %}
     <!------- JAVASCRIPT ------->
     <script src="topNav.js"></script>
