--- a/templates/partials/toc/toc_modals.html
+++ b/templates/partials/toc/toc_modals.html
@@ -285,7 +285,7 @@
 
 <!-- AND, TODAY -->
 <div class="modal" id="andToday">
-  <h5 class="modal-header">And, Today</h5>
+  <h5 class="modal-header">The Wheel Is Turning</h5>
   <div class="modal-imgContainer">
     <img
       class="modal-img"
@@ -295,7 +295,7 @@
   </div>
   <div class="modal-textContainer">
     <!-- LOOP NJK-->
-    {% for greenerText in andToday %}
+    {% for greenerText in theWheelIsTurning %}
     <p class="modal-text">{{greenerText.paragraph}}</p>
     {% endfor %}
   </div>
