--- a/templates/partials/toc/toc_nonfiction-SF.html
+++ b/templates/partials/toc/toc_nonfiction-SF.html
@@ -8,7 +8,7 @@
   <div class="sf5-line">
     <div class="sf5-line--movingBlock"></div>
   </div>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf14">The Greener Side</a>
+  <a class="pieceLink pieceLink-SF" id="sf14">The Greener Side</a>
   <div class="sf14-line sf14-line--1">
     <div class="sf14-line--movingBlock"></div>
   </div>
@@ -89,7 +89,7 @@
     <div class="sf3-line--movingBlock"></div>
   </div>
   <a href="#" class="pieceLink pieceLink-SF" id="sf12">Switched</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf13">And, Today</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf13">The Wheel Is Turning</a>
   <div class="sf13-line">
     <div class="sf13-line--movingBlock"></div>
   </div>
