--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,83 @@ a {
   transform: translate(0, 0); }
 
 /**========================================================================
+ *                          TOPNAV 
+ *========================================================================**/
+.about {
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  flex-direction: column; }
+  .about-mainHeader {
+    width: 100%;
+    text-align: center;
+    font-size: 5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin: 2rem 0; }
+  .about-subHeader {
+    width: 100%;
+    text-align: center;
+    font-size: 4rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin: 2rem 0; }
+  .about-miniHeader {
+    width: 100%;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin: 2rem 0; }
+  .about-text {
+    width: 50%; }
+
+.pictures {
+  display: flex;
+  width: 100%;
+  justify-content: space-around; }
+
+.picture-one {
+  height: 50rem; }
+  .picture-one > img {
+    border-radius: 3px;
+    height: inherit; }
+
+.picture-two {
+  height: 50rem; }
+  .picture-two > img {
+    border-radius: 3px;
+    height: inherit; }
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2rem; }
+  .about-content > div:not(:first-child) {
+    margin-top: 2rem; }
+
+.about-contact {
+  padding-bottom: 2rem;
+  display: flex;
+  justify-content: space-around;
+  border-top: 1px solid #969696; }
+
+.contact-socials {
+  height: 5rem;
+  display: flex;
+  justify-content: center; }
+
+.icon {
+  height: 3rem;
+  width: 3rem;
+  margin: 0 1rem; }
+  .icon > img {
+    height: inherit;
+    width: inherit; }
+
+/**========================================================================
  *                          fiction TEMPLATE 
  *========================================================================**/
 .fiction-content {
@@ -4341,7 +4418,7 @@ a {
 #sf10 {
   position: absolute;
   top: 35%;
-  left: 30%;
+  left: 35%;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -4631,7 +4708,7 @@ a {
 #sf13 {
   position: absolute;
   top: 35%;
-  left: 5%;
+  left: 0%;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -4674,9 +4751,9 @@ a {
   position: absolute;
   background-color: rgba(233, 233, 233, 0.75);
   height: 4px;
-  width: 11%;
+  width: 12%;
   top: 38%;
-  left: 17%;
+  left: 20%;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -4745,7 +4822,7 @@ a {
     .sf13-line {
       width: 13%;
       top: 38%;
-      left: 15%; } }
+      left: 18%; } }
   @media (max-width: 87.5em) {
     .sf13-line {
       display: none; } }
@@ -4762,6 +4839,8 @@ a {
   position: absolute;
   top: 15%;
   left: 70%;
+  background-color: #56d270;
+  cursor: none;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -4794,6 +4873,9 @@ a {
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
+  #sf14:hover {
+    background-color: #56d270;
+    cursor: not-allowed; }
   @media (max-width: 87.5em) {
     #sf14 {
       position: relative;
@@ -5416,8 +5498,8 @@ a {
   left: 50%;
   transform: translateX(-50%);
   z-index: 1000;
-  min-height: 95%;
-  max-height: min-content;
+  padding-bottom: 2rem;
+  height: 95%;
   border-radius: 10px;
   width: 95%;
   display: flex;
@@ -5428,7 +5510,8 @@ a {
   pointer-events: none;
   background-color: rgba(233, 233, 233, 0.95);
   transition: opacity 0.3s;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  overflow-y: auto; }
 
 .modal-header {
   margin-top: 1rem;
@@ -5550,8 +5633,8 @@ a {
   margin: 1rem 0;
   min-height: 20rem;
   max-height: 35rem;
-  overflow-y: scroll;
-  padding: 1rem 0;
+  overflow-y: auto;
+  padding: 3rem 0;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -5594,7 +5677,7 @@ a {
 
 #partOne .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -5633,7 +5716,7 @@ a {
 
 #partTwo .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -5672,7 +5755,7 @@ a {
 
 #partThree .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -5711,7 +5794,7 @@ a {
 
 #partFour .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -5750,7 +5833,7 @@ a {
 
 #partFive .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -5789,7 +5872,7 @@ a {
 
 #demolitionDerby .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -5878,3 +5961,6 @@ a {
 
 .width-100 {
   width: 100%; }
+
+.position-relative {
+  position: relative; }
