--- a/scss/_toc-modals.scss
+++ b/scss/_toc-modals.scss
@@ -8,8 +8,10 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 1000;
-  min-height: 95%;
-  max-height: min-content;
+  // min-height: 95%;
+  // max-height: max-content;
+  padding-bottom: 2rem;
+  height: 95%;
   border-radius: 10px;
   width: 95%;
   display: flex;
@@ -21,6 +23,7 @@
   background-color: $color-white-opaque-4;
   transition: opacity 0.3s;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .modal-header {
@@ -86,8 +89,8 @@
   margin: 1rem 0;
   min-height: 20rem;
   max-height: 35rem;
-  overflow-y: scroll;
-  padding: 1rem 0;
+  overflow-y: auto;
+  padding: 3rem 0;
   @include respond(break-850) {
     width: 90%;
     height: 25rem;
@@ -99,35 +102,35 @@
 
 #partOne .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   @include respond(break-850) {
     overflow: scroll;
   }
 }
 #partTwo .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   @include respond(break-850) {
     overflow: scroll;
   }
 }
 #partThree .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   @include respond(break-850) {
     overflow: scroll;
   }
 }
 #partFour .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   @include respond(break-850) {
     overflow: scroll;
   }
 }
 #partFive .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   @include respond(break-850) {
     overflow: scroll;
   }
@@ -135,7 +138,7 @@
 
 #demolitionDerby .modal-textContainer {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
   @include respond(break-850) {
     overflow: scroll;
   }
